--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,27 @@
 language: python
 
 python:
-  - "2.7"
+  - "2.7_with_system_site_packages"
 
 addons:
   apt:
     packages:
       - expect-dev  # provides unbuffer utility
       - python-lxml  # because pip installation is slow
+      - libxml2
+      - python-libxml2
 
 env:
   - VERSION="8.0" LINT_CHECK="1"
-  - VERSION="8.0" ODOO_REPO="odoo/odoo" LINT_CHECK="0"
   - VERSION="8.0" ODOO_REPO="OCA/OCB" LINT_CHECK="0"
 
-virtualenv:
-  system_site_packages: true
 
 install:
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - pip install unidecode
+  - pip install PyXmlSec --allow-external PyXMLSec --allow-insecure PyXMLSec
+  - pip install https://github.com/odoo-brazil/PySPED/archive/8.0.zip
   - travis_install_nightly
 
 script:
