--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - pip install unidecode
   - pip install reportlab
+  - pip install python-ldap
   - pip install http://xmlsoft.org/sources/python/libxml2-python-2.6.21.tar.gz
   - pip install https://github.com/odoo-brazil/pyxmlsec/archive/master.zip
   - pip install https://github.com/odoo-brazil/geraldo/archive/master.zip
