--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: python
 python:
   - "2.7_with_system_site_packages"
 
+sudo: required
+
 addons:
   apt:
     packages:
@@ -30,11 +32,11 @@ install:
   - travis_install_nightly
 
 before_script:
-  - chmod +x configure_locale.sh
+  - sudo chmod +x configure_locale.sh
 
 script:
   - ./configure_locale.sh
   - travis_run_tests
 
 after_success:
-  coveralls
+  - coveralls
