--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,14 @@ env:
   - VERSION="8.0" ODOO_REPO="OCA/OCB" LINT_CHECK="0"
 
 virtualenv:
-  - system_site_packages: true
+  system_site_packages: true
 
 install:
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
-  - pip install unidecode
   - pip install reportlab
+  - pip install unidecode
+  - pip install suds
   - pip install python-ldap
   - pip install http://xmlsoft.org/sources/python/libxml2-python-2.6.21.tar.gz
   - pip install https://github.com/odoo-brazil/pyxmlsec/archive/master.zip
@@ -42,4 +43,4 @@ script:
   - travis_run_tests
 
 after_success:
-  - coveralls
+  coveralls
